--- a/package.json
+++ b/package.json
@@ -9,12 +9,49 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
+    "@chakra-ui/react": "^1.6.6",
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/delimiter": "^1.2.0",
+    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/embed": "^2.4.6",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/image": "^2.6.1",
+    "@editorjs/link": "^2.3.1",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/simple-image": "^1.4.1",
+    "@editorjs/table": "^2.0.1",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
+    "editorjs-html": "^3.4.0",
+    "editorjs-inline-image": "^0.1.4",
+    "eslint-config-prettier": "^8.3.0",
+    "formik": "^2.2.9",
+    "framer-motion": "4",
+    "html-entities": "^2.3.2",
+    "jwt-decode": "^3.1.2",
     "next": "11.1.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-editor-js": "^1.10.0",
+    "react-google-login": "^5.2.2",
+    "reading-time": "^1.4.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "11.1.0",
+    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "2.3.2"
   }
 }
