--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "17.0.2",
     "react-editor-js": "^1.10.0",
     "react-google-login": "^5.2.2",
+    "react-select": "^4.3.1",
     "reading-time": "^1.4.0",
     "yup": "^0.32.9"
   },
