--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "react-dom": "17.0.2",
     "react-editor-js": "^1.10.0",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
     "react-select": "^4.3.1",
     "reading-time": "^1.4.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "11.1.0",
